--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
    <section id="campeonatos">
      <h2>Campeonatos</h2>
-     </li>
+     <li>
       River Plate, fundado en 1901 en La Boca, es uno de los clubes más grandes y exitosos de Argentina. Se mudó a Núñez en 1923 y en 1938 inauguró su estadio, el Monumental, el más grande del país. En los años 40 formó “La Máquina”, un equipo histórico por su juego ofensivo. A lo largo de su historia, contó con grandes ídolos como Ángel Labruna, Enzo Francescoli, Ariel Ortega y Marcelo Gallardo.
 
 Tácticamente, River se destacó con formaciones ofensivas como el 4-3-3 y el 4-2-3-1, adaptándose a diferentes épocas y estilos. Es el club con más títulos nacionales, con 38 campeonatos de liga y múltiples copas nacionales, además de 12 títulos internacionales, incluyendo 4 Copas Libertadores y una Copa Intercontinental.
@@ -172,34 +172,35 @@ En definitiva, River es un símbolo del fútbol argentino, reconocido por su his
 
        Desde sus inicios se caracterizó por un estilo de juego ofensivo y elegante. A lo largo de su historia, ha contado con grandes figuras que marcaron época. Entre los jugadores más recordados se encuentran Ángel Labruna, máximo goleador del club con 317 goles y símbolo de “La Máquina” de los años 40 junto a Muñoz, Moreno, Pedernera y Loustau; Bernabé Ferreyra, el potente delantero de los años 30; Alfredo Di Stéfano, quien brilló antes de su consagración internacional; Amadeo Carrizo, arquero revolucionario; Norberto “Beto” Alonso, clave en los títulos de los 70 y 80; Enzo Francescoli, ídolo uruguayo de los 80 y 90; Ariel Ortega, habilidoso delantero de los 90 y 2000; Hernán Crespo, artillero de la Copa Libertadores 1996; Marcelo Gallardo, figura como jugador y como entrenador; y Gonzalo “Pity” Martínez, autor del gol histórico en la final de Madrid 2018.
 
-En cuanto a la táctica, River ha variado su formación a lo largo de las décadas, aunque siempre mantuvo el ataque como prioridad. En los años 40, “La Máquina” popularizó el 4-3-3, con un mediocampo creativo y delanteros letales. En las décadas de 80 y 90 predominó el 4-4-2, con defensa sólida y volantes creativos. Durante la era de Ramón Díaz se utilizó con éxito el 4-3-1-2, con un enganche como Gallardo u Ortega alimentando a dos delanteros. Con Marcelo Gallardo como técnico, el esquema evolucionó a variantes como el 4-1-4-1 o 4-2-3-1, con presión alta, laterales ofensivos y mediocampistas dinámicos como Ponzio, Nacho Fernández y el “Pity” Martínez. Este estilo, junto con la jerarquía de sus jugadores, consolidó a River como el club con más títulos de liga en Argentina y uno de los más ganadores en el continented</p>
-     <img src="" alt="Plantel de River 2018">
-   </section>
-
-   <section id="dirigentes">
-     <h2>Dirigentes</h2>
-     <p>
-       A lo largo de su historia, River tuvo presidentes y dirigentes claves como Antonio Liberti (quien impulsó la construcción del Monumental) y Rodolfo D'Onofrio (gestor de la exitosa etapa 2014-2021).
-       Actualmente el presidente es Jorge Brito.
-     </p>
-     <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Rodolfo_Donofrio_2014.jpg" alt="Rodolfo D'Onofrio">
-   </section>
-
-   <section id="cancha">
-     <h2>La Cancha</h2>
-     <p>
-       El Estadio Monumental, oficialmente llamado Estadio Mâs Monumental por cuestiones de patrocinio, es la sede del Club Atlético River Plate y el estadio más grande de Argentina. Está ubicado en el barrio de Núñez, en la ciudad de Buenos Aires, sobre la Avenida Figueroa Alcorta. Fue inaugurado el 26 de mayo de 1938 con un partido amistoso frente a Peñarol de Uruguay. Su construcción se realizó en un terreno donado por el gobierno nacional y, en sus primeras décadas, fue remodelado en varias ocasiones para ampliar su capacidad y modernizar sus instalaciones.
-
-En sus orígenes tenía forma de herradura, ya que uno de sus lados no estaba cerrado. En 1978, para el Mundial de Fútbol que se disputó en Argentina, se completó la estructura, alcanzando una capacidad cercana a las 76.000 personas. Entre 2020 y 2023, River realizó una importante remodelación que incluyó nuevas tribunas más cercanas al campo de juego, butacas en todos los sectores, mejoras en accesos y tecnología, y una ampliación que llevó su capacidad a más de 83.000 espectadores, convirtiéndolo en el estadio con mayor aforo de Sudamérica.
+En cuanto a la táctica, River ha variado su formación a lo largo de las décadas, aunque siempre mantuvo el ataque como prioridad. En los años 40, “La Máquina” popularizó el 4-3-3, con un mediocampo creativo y delanteros letales. En las décadas de 80 y 90 predominó el 4-4-2, con defensa sólida y volantes creativos. Durante la era de Ramón Díaz se utilizó con éxito el 4-3-1-2, con un enganche como Gallardo u Ortega alimentando a dos delanteros. Con Marcelo Gallardo como técnico, el esquema evolucionó a variantes como el 4-1-4-1 o 4-2-3-1, con presión alta, laterales ofensivos y mediocampistas dinámicos como Ponzio, Nacho Fernández y el “Pity” Martínez. Este estilo, junto con la jerarquía de sus jugadores, consolidó a River como el club con más títulos de liga en Argentina y uno de los más ganadores en el continented
 <p>
-  <img src="img/dirigente.jpeg" alt="dirigentes">
-El Monumental ha sido escenario de momentos históricos del fútbol argentino: albergó la final del Mundial 1978 donde la Selección Argentina se consagró campeona, múltiples finales de Copa Libertadores y Superclásicos contra Boca Juniors, así como recitales de artistas internacionales. El campo de juego cuenta con césped híbrido (natural y sintético) para mejorar su resistencia, y el estadio posee vestuarios modernos, palcos VIP, un restaurante con vista al campo y museo propio donde se exhiben trofeos y recuerdos de la historia de River
+  <img src="img/2025.jpeg" alt="jugadores">
+
+</section>
+<setion id="cancha">
+<h2>cancha</h2>
+<p>
+En sus orígenes tenía forma de herradura, ya que uno de sus lados no estaba cerrado. En 1978, para el Mundial de Fútbol que se disputó en Argentina, se completó la estructura, alcanzando una capacidad cercana a las 76.000 personas. Entre 2020 y 2023, River realizó una importante remodelación que incluyó nuevas tribunas más cercanas al campo de juego, butacas en todos los sectores, mejoras en accesos y tecnología, y una ampliación que llevó su capacidad a más de 83.000 espectadores, convirtiéndolo en el estadio con mayor aforo de Sudamérica.
+
+  El Monumental ha sido escenario de momentos históricos del fútbol argentino: albergó la final del Mundial 1978 donde la Selección Argentina se consagró campeona, múltiples finales de Copa Libertadores y Superclásicos contra Boca Juniors, así como recitales de artistas internacionales. El campo de juego cuenta con césped híbrido (natural y sintético) para mejorar su resistencia, y el estadio posee vestuarios modernos, palcos VIP, un restaurante con vista al campo y museo propio donde se exhiben trofeos y recuerdos de la historia de River
 
      </p>
 
   <img src="img/cancha.jpg" alt="Estadio Monumental">
 
-   </section>
+<section>
+  <section id="dirigentes">
+<h2>dirigente</h2>
+<p>
+    La conducción actual del Club Atlético River Plate corresponde a la Comisión Directiva elegida en diciembre de 2021 para el período 2021–2025. El presidente es Jorge Pablo Brito, acompañado por Matías Patanian como vicepresidente primero y Ignacio Villarroel como vicepresidente segundo. El Secretario General es Stefano Di Carlo, mientras que la Secretaría de Actas está a cargo de Mariano Taratutty y la Prosecretaría de Agustín Forchieri. En el área financiera, el Tesorero es Andrés Ballotta y el Protesorero Ignacio Amui, mientras que Santiago Poblet cumple funciones como adscripto a Mesa Directiva. Además, la Comisión se completa con vocales titulares y suplentes, así como con fiscalizadores, entre los que se destacan referentes como Clara D’Onofrio, Carolina Avalis y Verónica Villar.
+
+Bajo la presidencia de Brito, River implementó en 2023 una reforma estatutaria que introdujo cambios de fondo en la vida institucional: se eliminó la posibilidad de reelección inmediata del presidente a partir de diciembre de 2025, se fijaron límites de permanencia en cargos clave como secretario general y tesorero, se estableció un cupo femenino obligatorio en las listas, se redujo la edad mínima para votar y participar, y se implementó un Fair Play financiero que regula el presupuesto y el nivel de endeudamiento del club. Dentro de este marco, el dirigente Stefano Di Carlo, actual secretario general, fue señalado como el principal candidato oficialista a suceder a Brito en las próximas elecciones.
+
+En síntesis, la actual dirigencia de River Plate está encabezada por Jorge Brito junto a un equipo de vicepresidentes y directivos que buscan consolidar un modelo de gestión moderno, transparente y con reglas institucionales más claras para garantizar la continuidad y el equilibrio en la conducción del club.
+<p>
+  <img src="img/dirigente.jpeg" alt="dirigente">
+
+   <section>
 
    <section id="fundacionciones solidarias">
      <h2>Fundacion</h2>
@@ -227,9 +228,10 @@ La presencia solidaria de River no se limita a la fundación: el club también o
      <h2>Galería de Fotos</h2>
      <div class="galeria">
        <img src="img/2018.jpg" alt="Campeones 2018">
-       <img src="img/2025.jpg" alt="Plantel 2025">
+       <img src="img/2025.jpeg" alt="Plantel 2025">
        <img src="img/cancha.jpg" alt="Estadio">
-       <img src="img/equipov.jpg"alt="Equipo antiguo">
+       <img src="img/equipov.jpg" alt="Equipo antiguo">
+       <img src="img/dirigente.jpeg" alt="dirigete">
      </div>
    </section>
 
@@ -239,19 +241,13 @@ La presencia solidaria de River no se limita a la fundación: el club también o
      <img id="imagen-ampliada" src="" alt="Imagen ampliada">
    </div>
 
-   <section id="video">
-     <h2>Video Destacado</h2>
-     <div class="video-container">
-       <iframe src="https://youtu.be/0caHUbK_Ens?si=5WIT4jffAUR5GPe" allowfullscreen></iframe>
-     </div>
-   </section>
 
    <section id="contacto">
      <h2>Contacto</h2>
      <p>
        Sitio oficial: <a href="https://www.cariverplate.com.ar" target="_blank">www.cariverplate.com.ar</a><br>
        Dirección: Av. Figueroa Alcorta 7597, Buenos Aires, Argentina<br>
-       Teléfono: +54 11 4789-1200
+       
      </p>
    </section>
  </div>
